--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electrum-helper",
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "description": "A series of helper methods for interacting with the electrum-client library. ",
   "main": "index.js",
   "scripts": {
